force-app/main/default/objects/redwing__CheckIn__c/redwing__CheckIn__c.object-meta.xml
<CustomObject>
    <label>Check-In</label>
    <nameField>
        <displayFormat>CHI-{000000}</displayFormat>
        <label>Check-In ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Check-Ins</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>