force-app/main/default/objects/redwing__CheckIn__c/fields/redwing__CheckIn_Location__c.field-meta.xml
<CustomField>
    <fullName>redwing__CheckIn_Location__c</fullName>
    <inlineHelpText>Latitude/Longitude for the check-in location</inlineHelpText>
    <label>CheckIn Location</label>
    <required>true</required>
    <scale>3</scale>
    <type>Location</type>
</CustomField>