force-app/main/default/objects/redwing__CheckIn__c/fields/redwing__Mile_Radius__c.field-meta.xml
<CustomField>
    <fullName>redwing__Mile_Radius__c</fullName>
    <defaultValue>0.020</defaultValue>
    <inlineHelpText>Mile radius around the specified latitude/longitude for users to do a valid check-in</inlineHelpText>
    <label>Mile Radius</label>
    <precision>6</precision>
    <required>true</required>
    <scale>3</scale>
    <type>Number</type>
</CustomField>